# Notify-Chan

./: .gitignore  README.md  createDaemon.sh  main.py  pyproject.toml  requirements.txt  sampleconfig.json
